// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site admin user course enrollment nav bar test Basic render test (has no roster link) 1`] = `
<div
  className="site-admin-card site-admin-course-nav-bar"
>
  <div
    className="site-admin-course-identity"
  >
    <img
      className="course-icon"
      onError={[Function]}
      src="/contentpackage-landing-232x170.png?t=0"
    />
    <div
      className="info"
    >
      <div
        className="label"
      >
        Course 1
      </div>
      <div
        className="title"
      >
        course1
      </div>
    </div>
    <div
      className="actions"
    >
      <div
        className="nti-link-to-path profile"
        to="#"
      >
        <i
          className="icon-goto"
        />
        <span>
          View Course
        </span>
      </div>
    </div>
  </div>
  <div
    className="site-admin-tabs-container"
  >
    <ul
      className="unadorned-list site-admin-tabs"
    >
      <li>
        <div
          className="nti-link-to-path"
          exact={true}
          to="./"
        >
          Overview
        </div>
      </li>
      <li />
      <li>
        <div
          className="nti-link-to-path"
          to="./reports"
        >
          Reports
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Site admin user course enrollment nav bar test Basic render test (has roster link) 1`] = `
<div
  className="site-admin-card site-admin-course-nav-bar"
>
  <div
    className="site-admin-course-identity"
  >
    <img
      className="course-icon"
      onError={[Function]}
      src="/contentpackage-landing-232x170.png?t=0"
    />
    <div
      className="info"
    >
      <div
        className="label"
      >
        Course 1
      </div>
      <div
        className="title"
      >
        course1
      </div>
    </div>
    <div
      className="actions"
    >
      <div
        className="nti-link-to-path profile"
        to="#"
      >
        <i
          className="icon-goto"
        />
        <span>
          View Course
        </span>
      </div>
    </div>
  </div>
  <div
    className="site-admin-tabs-container"
  >
    <ul
      className="unadorned-list site-admin-tabs"
    >
      <li>
        <div
          className="nti-link-to-path"
          exact={true}
          to="./"
        >
          Overview
        </div>
      </li>
      <li>
        <div
          className="nti-link-to-path"
          to="./roster"
        >
          Roster
        </div>
      </li>
      <li>
        <div
          className="nti-link-to-path"
          to="./reports"
        >
          Reports
        </div>
      </li>
    </ul>
  </div>
</div>
`;
